--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Study Stan</title>
+    <title>Study Steve</title>
 </head>
 <body>
     <iframe src="https://character.ai/chat/uUVH1j4y0dWhV1ebpKRzIj7IbpViAsUPqyxmC-wbchE" style="height: 100vh; width: 100vw" frameborder="0"></iframe>
